--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,16 @@ name = "screenstub"
 version = "0.0.1"
 
 [dependencies]
-xcb = "*"
-quick-error = "*"
+xcb = "^0.8.1"
+quick-error = "^1.2.1"
+mio = "^0.6.13"
+futures = "^0.1.18"
+futures-cpupool = "^0.1.8"
+tokio-core = "^0.1.12"
+tokio-io = "^0.1.5"
+tokio-process = "^0.1.5"
+tokio-file-unix = "^0.4.2"
+tokio-retry = "^0.1.1"
+input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git", features = ["tokio"] }
+void = "^1.0.2"
+ddcutil = "^0.0.3"
