--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,16 +3,22 @@ name = "screenstub"
 version = "0.0.1"
 
 [dependencies]
-xcb = "^0.8.1"
-quick-error = "^1.2.1"
-mio = "^0.6.13"
+tokio-unzip = { path = "tokio-unzip" }
+tokio-fd = { path = "tokio-fd" }
+screenstub-config = { path = "config" }
+screenstub-uinput = { path = "uinput" }
+screenstub-event = { path = "event" }
+screenstub-ddc = { path = "ddc" }
+screenstub-qmp = { path = "qmp" }
+screenstub-x = { path = "x" }
+input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git" }
+tokio-core = "^0.1.12"
+tokio-process = "^0.1.5"
+tokio-timer = "^0.1.2"
+failure = "^0.1.1"
 futures = "^0.1.18"
 futures-cpupool = "^0.1.8"
-tokio-core = "^0.1.12"
-tokio-io = "^0.1.5"
-tokio-process = "^0.1.5"
-tokio-file-unix = "^0.4.2"
-tokio-retry = "^0.1.1"
-input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git", features = ["tokio"] }
-void = "^1.0.2"
-ddcutil = "^0.0.3"
+clap = "^2.30.0"
+env_logger = "^0.5.4"
+log = "^0.4.1"
+serde_yaml = "^0.7.3"
