--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ addons:
     - libudev-dev
     - libxrandr-dev
     - libdrm-dev
+    - libxcb1-dev
+    - libxcb-xtest0-dev
 cache:
   directories:
   - "$HOME/.cargo"
