--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "screenstub"
 version = "0.0.1"
+edition = "2018"
 
 [dependencies]
-tokio-unzip = { path = "tokio-unzip" }
 tokio-fuse = { path = "tokio-fuse" }
 tokio-fd = { path = "tokio-fd" }
 screenstub-config = { path = "config" }
@@ -12,21 +12,22 @@ screenstub-event = { path = "event" }
 screenstub-qemu = { path = "qemu" }
 screenstub-ddc = { path = "ddc" }
 screenstub-x = { path = "x" }
-input-linux = { version = "^0.0.1" }
-tokio-core = "^0.1.12"
-tokio-process = "^0.1.5"
-tokio-timer = "^0.1.2"
+input-linux = { version = "^0.1.0", features = ["with-tokio"] }
+tokio = { version = "^0.2.0", default-features = false, features = ["macros", "process", "rt-threaded"] }
 failure = "^0.1.1"
-futures = "^0.1.18"
-futures-cpupool = "^0.1.8"
-futures-stream-select-all = "^0.1.2"
+futures = { version = "^0.3.5", features = ["thread-pool"] }
 clap = "^2.30.0"
 env_logger = "^0.5.4"
 log = "^0.4.1"
 serde_yaml = "^0.7.3"
 result = "^1.0.0"
-tokio-qapi = { version = "^0.0.2", features = ["qmp", "qga"] }
+tokio-qapi = { version = "^0.4.0", features = ["qmp", "qga"] }
 
 [features]
 with-ddcutil = ["screenstub-ddc/with-ddcutil", "screenstub-config/with-ddcutil"]
+with-ddc = ["screenstub-ddc/with-ddc", "screenstub-config/with-ddc"]
 default = ["with-ddcutil"]
+
+[patch.crates-io]
+tokio-qapi = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
+input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git" }
