--- a/ddc/Cargo.toml
+++ b/ddc/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 name = "screenstub-ddc"
 version = "0.0.1"
+edition = "2018"
 
 [dependencies]
 ddcutil = { version = "^0.0.3", optional = true }
+ddc-hi = { version = "^0.1.3", optional = true }
+mccs-db = { version = "^0.1.1", optional = true }
 failure = "^0.1.1"
 failure_derive = "^0.1.1"
 
 [features]
 with-ddcutil = ["ddcutil"]
+with-ddc = ["ddc-hi", "mccs-db"]
