--- a/event/Cargo.toml
+++ b/event/Cargo.toml
@@ -3,6 +3,9 @@ name = "screenstub-event"
 version = "0.0.1"
 
 [dependencies]
-input-linux = "^0.0.1"
+input-linux = "^0.1.0"
 screenstub-x = { path = "../x" }
 log = "^0.4.1"
+
+[patch.crates-io]
+input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git" }
