--- a/samples/config.yml
+++ b/samples/config.yml
@@ -1,20 +1,24 @@
 - ddc:
-    host: libddcutil # Use libddcutil (recommended default)
-    #host: ddcutil # Use ddcutil CLI instead # CURRENTLY UNIMPLEMENTED
+    #host: [] # disable input switching
+    #host: # configure how to switch back from the guest
+    #- ddc # (default) Use ddc-rs
     #host:
-    #  exec: [ddccontrol, -r, "0x60", -w, "{}", /dev/i2c-5]
-    guest: # configure how to switch back from the guest
-      guest_exec: ["C:/ScreenBright.exe", "-set", "0x60", "{}"] # "{}" is for decimal values
-      #guest_exec: ["C:/ddcset.exe", "0x60", "0x{:x}"] # or use "{:x}" for prefixless hex
-      #exec: ["ssh", "user@vm", "ddcutil", "setvcp", "0x60", "{}"] # system commands can also be used
+    #- exec: [ddccontrol, -r, "0x60", -w, "{}", /dev/i2c-5]
+    guest: # configure how to switch to the guest
+    #guest: [] # disable input switching
+    #- ddc (default) Controls DDC from the guest - requires no guest configuration but limited monitor support
+    - guest_wait # wait until guest agent responds
+    - guest_exec: ["C:/ScreenBright.exe", "-set", "0x60", "{}"] # "{}" is for decimal input value
+    #- guest_exec: ["C:/ddcset.exe", "setvcp", "60", "{:x}"] # or "0x{:x}" for hex input value
+    #- exec: ["ssh", "user@vm", "ddcutil", "setvcp", "0x60", "{}"] # system commands can also be used
   monitor: # fill in with info from `screenstub detect`
     manufacturer: GSM
     model: LG Ultra HD
     #serial: "..."
-  guest_source: # Can be automatically detected, but best to fill in if monitor has more than two inputs
+  guest_source: # Could be automatically detected, but best to fill in if monitor has more than two inputs
     name: DisplayPort-1
     #value: 0x0f # can also specify raw VCP value
-  #host_source: # Usually will be automatically detected and not necessary to configure this
+  #host_source: # Usually automatically detected
     #name: HDMI-1
     #value: 0x11
   qemu:
