--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -1,15 +1,22 @@
 [package]
 name = "screenstub-config"
 version = "0.0.1"
+edition = "2018"
 
 [dependencies]
-serde = "^1.0.27"
-serde_derive = "^1.0.27"
+serde = { version = "^1.0.27", features = ["derive"] }
+serde-hex = "^0.1.0"
+csv = "^1.1.3"
 input-linux = { version = "^0.1.0", features = ["with-serde"] }
+qapi-spec = { version = "^0.2.3" }
+qapi-qmp = { version = "^0.4.0" }
 
 [features]
 with-ddcutil = []
 with-ddc = []
 
 [patch.crates-io]
+qapi-codegen = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
+qapi-spec = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
+qapi-qmp = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
 input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git" }
