--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
 name = "screenstub"
-version = "0.0.1"
+version = "0.1.0"
 edition = "2018"
 
 [dependencies]
-tokio-fuse = { path = "tokio-fuse" }
 tokio-fd = { path = "tokio-fd" }
 screenstub-config = { path = "config" }
 screenstub-uinput = { path = "uinput" }
@@ -12,16 +11,17 @@ screenstub-event = { path = "event" }
 screenstub-qemu = { path = "qemu" }
 screenstub-ddc = { path = "ddc" }
 screenstub-x = { path = "x" }
-input-linux = { version = "^0.1.0", features = ["with-tokio"] }
-tokio = { version = "^0.2.0", default-features = false, features = ["macros", "process", "rt-threaded"] }
+input-linux = { version = "^0.3.0", features = ["with-tokio"] }
+tokio = { version = "^0.2.0", default-features = false, features = ["process", "rt-threaded"] }
 failure = "^0.1.1"
 futures = { version = "^0.3.5", features = ["thread-pool"] }
 clap = "^2.30.0"
 env_logger = "^0.5.4"
 log = "^0.4.1"
 serde_yaml = "^0.7.3"
+enumflags2 = "^0.6.4"
 result = "^1.0.0"
-tokio-qapi = { version = "^0.4.0", features = ["qmp", "qga"] }
+qapi = { version = "^0.4.0", features = ["qmp", "qga"] }
 
 [features]
 with-ddcutil = ["screenstub-ddc/with-ddcutil", "screenstub-config/with-ddcutil"]
@@ -29,8 +29,7 @@ with-ddc = ["screenstub-ddc/with-ddc", "screenstub-config/with-ddc"]
 default = ["with-ddc"]
 
 [patch.crates-io]
-tokio-qapi = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
+qapi = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
 qapi-codegen = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
 qapi-spec = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
 qapi-qmp = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
-input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git" }
