--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -7,7 +7,8 @@ edition = "2018"
 serde = { version = "^1.0.27", features = ["derive"] }
 serde-hex = "^0.1.0"
 csv = "^1.1.3"
-input-linux = { version = "^0.1.0", features = ["with-serde"] }
+enumflags2 = "^0.6.4"
+input-linux = { version = "^0.3.0", features = ["with-serde"] }
 qapi-spec = { version = "^0.2.3" }
 qapi-qmp = { version = "^0.4.0" }
 
@@ -19,4 +20,3 @@ with-ddc = []
 qapi-codegen = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
 qapi-spec = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
 qapi-qmp = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
-input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git" }
