--- a/event/Cargo.toml
+++ b/event/Cargo.toml
@@ -1,11 +1,10 @@
 [package]
 name = "screenstub-event"
 version = "0.0.1"
+edition = "2018"
 
 [dependencies]
-input-linux = "^0.1.0"
+input-linux = "^0.3.0"
+smallvec = "^1.4.1"
 screenstub-x = { path = "../x" }
 log = "^0.4.1"
-
-[patch.crates-io]
-input-linux = { git = "https://github.com/arcnmx/input-linux-rs.git" }
