--- a/qemu/Cargo.toml
+++ b/qemu/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2018"
 futures = "^0.3.5"
 failure = "^0.1.1"
 log = "^0.4.1"
-tokio = { version = "^0.2.0", default-features = false, features = ["time", "uds"] }
-tokio-qapi = { version = "^0.4.0", features = ["qmp", "qga"] }
+tokio = { version = "^0.2.0", default-features = false, features = ["time", "sync"] }
+qapi = { version = "^0.4.1", features = ["qmp", "qga", "async-tokio-uds", "async-tokio-spawn"] }
 
 [patch.crates-io]
-tokio-qapi = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
+qapi = { git = "https://github.com/arcnmx/qapi-rs.git", branch = "futures-preview" }
