--- a/x/Cargo.toml
+++ b/x/Cargo.toml
@@ -9,4 +9,5 @@ tokio = { version = "^0.2.0", default-features = false, features = ["io-driver",
 mio = { version = "^0.6.0", default-features = false }
 failure = "^0.1.1"
 xcb = { version = "^0.9.0", features = ["xtest", "xkb", "dpms"] }
+input-linux = "^0.3.0"
 log = "^0.4.1"
