--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -8,6 +8,7 @@ serde = { version = "^1.0.27", features = ["derive"] }
 serde-hex = "^0.1.0"
 csv = "^1.1.3"
 enumflags2 = "^0.6.4"
+humantime-serde = "^1.0.0"
 input-linux = { version = "^0.3.0", features = ["with-serde"] }
 qapi-spec = { version = "^0.3.0" }
 qapi-qmp = { version = "^0.6.0" }
