--- a/x/Cargo.toml
+++ b/x/Cargo.toml
@@ -12,6 +12,8 @@ screenstub-fd = { version = "^0.0.1", path = "../fd" }
 futures = { version = "^0.3.4", features = ["bilock", "unstable"] }
 tokio = { version = "^1.0.0", default-features = false, features = ["rt-multi-thread"] }
 anyhow = "^1.0.42"
-xcb = { version = "^0.9.0", features = ["xtest", "xkb", "dpms"] }
+xproto = { version = "0.1", features = ["xtest", "xkb", "xinput", "dpms"], git = "https://github.com/arcnmx/xproto-rs", branch = "wip" }
+xserver = { version = "0.1", git = "https://github.com/arcnmx/xproto-rs", branch = "wip" }
+enumflags2 = "0.6"
 input-linux = "0.6"
 log = "^0.4.1"
