--- a/x/Cargo.toml
+++ b/x/Cargo.toml
@@ -5,9 +5,8 @@ edition = "2018"
 
 [dependencies]
 futures = { version = "^0.3.4", features = ["bilock", "unstable"] }
-tokio = { version = "^0.2.0", default-features = false, features = ["io-driver", "rt-threaded", "blocking"] }
-mio = { version = "^0.6.0", default-features = false }
+tokio = { version = "^0.3.3", default-features = false, features = ["rt-multi-thread"] }
 failure = "^0.1.1"
 xcb = { version = "^0.9.0", features = ["xtest", "xkb", "dpms"] }
-input-linux = "^0.3.0"
+input-linux = "^0.4.0"
 log = "^0.4.1"
