--- a/x/Cargo.toml
+++ b/x/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 edition = "2018"
 
 [dependencies]
+screenstub-fd = { version = "^0.0.1", path = "../fd" }
 futures = { version = "^0.3.4", features = ["bilock", "unstable"] }
 tokio = { version = "^0.3.3", default-features = false, features = ["rt-multi-thread"] }
 failure = "^0.1.1"
