--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ screenstub-ddc = { path = "ddc" }
 screenstub-x = { path = "x" }
 input-linux = { version = "^0.5.0", features = ["with-tokio"] }
 tokio = { version = "^1.0.0", default-features = false, features = ["process", "rt-multi-thread"] }
-failure = "^0.1.1"
+anyhow = "^1.0.42"
 futures = { version = "^0.3.5", features = ["thread-pool"] }
 clap = "^2.30.0"
 env_logger = "^0.9.0"
