--- a/ddc/Cargo.toml
+++ b/ddc/Cargo.toml
@@ -5,10 +5,9 @@ edition = "2018"
 
 [dependencies]
 ddcutil = { version = "^0.0.3", optional = true }
-ddc-hi = { version = "^0.3.0", optional = true }
+ddc-hi = { version = "^0.4.0", optional = true }
 mccs = { version = "^0.1.0", optional = true }
-failure = "^0.1.1"
-failure_derive = "^0.1.1"
+anyhow = "^1.0.42"
 
 [features]
 with-ddcutil = ["ddcutil"]
