--- a/qemu/Cargo.toml
+++ b/qemu/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 
 [dependencies]
 futures = "^0.3.5"
-failure = "^0.1.1"
+anyhow = "^1.0.42"
 log = "^0.4.1"
 tokio = { version = "^1.0.0", default-features = false, features = ["time", "sync"] }
 qapi = { version = "^0.8.0", features = ["qmp", "qga", "async-tokio-net", "async-tokio-spawn"] }
