--- a/x/Cargo.toml
+++ b/x/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 screenstub-fd = { version = "^0.0.1", path = "../fd" }
 futures = { version = "^0.3.4", features = ["bilock", "unstable"] }
 tokio = { version = "^1.0.0", default-features = false, features = ["rt-multi-thread"] }
-failure = "^0.1.1"
+anyhow = "^1.0.42"
 xcb = { version = "^0.9.0", features = ["xtest", "xkb", "dpms"] }
 input-linux = "^0.5.0"
 log = "^0.4.1"
