--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ log = "^0.4.1"
 serde_yaml = "^0.8.13"
 enumflags2 = "^0.6.4"
 result = "^1.0.0"
+ctrlc = { version = "^3.1.9", features = ["termination"] }
 qapi = { version = "^0.8.0", features = ["qmp", "qga"] }
 
 [features]
