--- a/ddc/Cargo.toml
+++ b/ddc/Cargo.toml
@@ -3,6 +3,10 @@ name = "screenstub-ddc"
 version = "0.0.1"
 edition = "2018"
 
+include = [
+	"/src/**/*.rs",
+]
+
 [dependencies]
 ddcutil = { version = "^0.0.3", optional = true }
 ddc-hi = { version = "^0.4.0", optional = true }
