--- a/qemu/Cargo.toml
+++ b/qemu/Cargo.toml
@@ -3,6 +3,10 @@ name = "screenstub-qemu"
 version = "0.0.1"
 edition = "2018"
 
+include = [
+	"/src/**/*.rs",
+]
+
 [dependencies]
 futures = "^0.3.5"
 anyhow = "^1.0.42"
