--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,18 +16,18 @@ screenstub-event = { path = "event" }
 screenstub-qemu = { path = "qemu" }
 screenstub-ddc = { path = "ddc" }
 screenstub-x = { path = "x" }
-input-linux = { version = "^0.5.0", features = ["with-tokio"] }
-tokio = { version = "^1.0.0", default-features = false, features = ["process", "rt-multi-thread"] }
-anyhow = "^1.0.42"
-futures = { version = "^0.3.5", features = ["thread-pool"] }
-clap = "^2.30.0"
-env_logger = "^0.9.0"
-log = "^0.4.1"
-serde_yaml = "^0.8.13"
-enumflags2 = "^0.6.4"
-result = "^1.0.0"
-ctrlc = { version = "^3.1.9", features = ["termination"] }
-qapi = { version = "^0.8.0", features = ["qmp", "qga"] }
+input-linux = { version = "0.5", features = ["with-tokio"] }
+tokio = { version = "1", default-features = false, features = ["process", "rt-multi-thread"] }
+anyhow = "1"
+futures = { version = "0.3", features = ["thread-pool"] }
+clap = "2"
+env_logger = "0.10"
+log = "0.4"
+serde_yaml = "0.9"
+enumflags2 = "0.6"
+result = "1"
+ctrlc = { version = "3", features = ["termination"] }
+qapi = { version = "0.11", features = ["qmp", "qga"] }
 
 [features]
 with-ddcutil = ["screenstub-ddc/with-ddcutil", "screenstub-config/with-ddcutil"]
