--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -9,14 +9,14 @@ include = [
 ]
 
 [dependencies]
-serde = { version = "^1.0.27", features = ["derive"] }
-serde-hex = "^0.1.0"
-csv = "^1.1.3"
-enumflags2 = "^0.6.4"
-humantime-serde = "^1.0.0"
-input-linux = { version = "^0.5.0", features = ["with-serde"] }
-qapi-spec = { version = "^0.3.0" }
-qapi-qmp = { version = "^0.7.0" }
+serde = { version = "1", features = ["derive"] }
+serde-hex = "0.1"
+csv = "1"
+enumflags2 = "0.6"
+humantime-serde = "1"
+input-linux = { version = "0.5", features = ["with-serde"] }
+qapi-spec = { version = "0.3" }
+qapi-qmp = { version = "0.11" }
 
 [features]
 with-ddcutil = []
