--- a/ddc/Cargo.toml
+++ b/ddc/Cargo.toml
@@ -8,10 +8,10 @@ include = [
 ]
 
 [dependencies]
-ddcutil = { version = "^0.0.3", optional = true }
-ddc-hi = { version = "^0.4.0", optional = true }
-mccs = { version = "^0.1.0", optional = true }
-anyhow = "^1.0.42"
+ddcutil = { version = "0.0.3", optional = true }
+ddc-hi = { version = "0.4", optional = true }
+mccs = { version = "0.1", optional = true }
+anyhow = "1"
 
 [features]
 with-ddcutil = ["ddcutil"]
