--- a/uinput/Cargo.toml
+++ b/uinput/Cargo.toml
@@ -8,11 +8,11 @@ include = [
 ]
 
 [dependencies]
-screenstub-fd = { version = "^0.0.1", path = "../fd" }
-input-linux = { version = "^0.5.0", features = ["with-tokio"] }
-futures = { version = "^0.3.4", features = ["bilock", "unstable"] }
-tokio = { version = "^1.0.0", default-features = false, features = ["macros", "time", "io-util", "rt"] }
-tokio-util = { version = "^0.6.0", default-features = false, features = [ "codec" ] }
-bytes = "^1.0.0"
-log = "^0.4.1"
-libc = "^0.2.36"
+screenstub-fd = { version = "0.0.1", path = "../fd" }
+input-linux = { version = "0.5", features = ["with-tokio"] }
+futures = { version = "0.3", features = ["bilock", "unstable"] }
+tokio = { version = "1", default-features = false, features = ["macros", "time", "io-util", "rt"] }
+tokio-util = { version = "0.7", default-features = false, features = [ "codec" ] }
+bytes = "1"
+log = "0.4"
+libc = "0.2"
