chore: bump input-linux

--- a/uinput/Cargo.toml
+++ b/uinput/Cargo.toml
@@ -9,7 +9,7 @@ include = [
 
 [dependencies]
 screenstub-fd = { version = "^0.0.1", path = "../fd" }
-input-linux = { version = "^0.5.0", features = ["with-tokio"] }
+input-linux = { version = "0.6", features = ["tokio-util-0_6"] }
 futures = { version = "^0.3.4", features = ["bilock", "unstable"] }
 tokio = { version = "^1.0.0", default-features = false, features = ["macros", "time", "io-util", "rt"] }
 tokio-util = { version = "^0.6.0", default-features = false, features = [ "codec" ] }
