--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ screenstub-event = { path = "event" }
 screenstub-qemu = { path = "qemu" }
 screenstub-ddc = { path = "ddc" }
 screenstub-x = { path = "x" }
-input-linux = { version = "^0.5.0", features = ["with-tokio"] }
+input-linux = "0.6"
 tokio = { version = "^1.0.0", default-features = false, features = ["process", "rt-multi-thread"] }
 anyhow = "^1.0.42"
 futures = { version = "^0.3.5", features = ["thread-pool"] }
