--- a/x/Cargo.toml
+++ b/x/Cargo.toml
@@ -13,5 +13,5 @@ futures = { version = "^0.3.4", features = ["bilock", "unstable"] }
 tokio = { version = "^1.0.0", default-features = false, features = ["rt-multi-thread"] }
 anyhow = "^1.0.42"
 xcb = { version = "^0.9.0", features = ["xtest", "xkb", "dpms"] }
-input-linux = "^0.5.0"
+input-linux = "0.6"
 log = "^0.4.1"
