--- a/config/Cargo.toml
+++ b/config/Cargo.toml
@@ -15,8 +15,8 @@ csv = "^1.1.3"
 enumflags2 = "^0.6.4"
 humantime-serde = "^1.0.0"
 input-linux = { version = "0.6", features = ["serde"] }
-qapi-spec = { version = "^0.3.0" }
-qapi-qmp = { version = "^0.10.0" }
+qapi-spec = { version = "0.3" }
+qapi-qmp = { version = "0.11" }
 
 [features]
 with-ddcutil = []
