--- a/qemu/Cargo.toml
+++ b/qemu/Cargo.toml
@@ -11,5 +11,5 @@ include = [
 futures = "^0.3.5"
 anyhow = "^1.0.42"
 log = "^0.4.1"
-tokio = { version = "^1.0.0", default-features = false, features = ["time", "sync"] }
-qapi = { version = "^0.10.0", features = ["qmp", "qga", "async-tokio-net", "async-tokio-spawn"] }
+tokio = { version = "1", default-features = false, features = ["time", "sync"] }
+qapi = { version = "0.11", features = ["qmp", "qga", "async-tokio-net", "async-tokio-spawn"] }
