--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ input-linux = "0.6"
 tokio = { version = "^1.0.0", default-features = false, features = ["process", "rt-multi-thread"] }
 anyhow = "^1.0.42"
 futures = { version = "^0.3.5", features = ["thread-pool"] }
-clap = "^3.1.12"
+clap = "4"
 env_logger = "^0.9.0"
 log = "^0.4.1"
 serde_yaml = "^0.8.13"
