--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ tokio = { version = "^1.0.0", default-features = false, features = ["process", "
 anyhow = "^1.0.42"
 futures = { version = "^0.3.5", features = ["thread-pool"] }
 clap = "4"
-env_logger = "^0.9.0"
-log = "^0.4.1"
+env_logger = "0.10"
+log = "0.4"
 serde_yaml = "^0.8.13"
 enumflags2 = "^0.6.4"
 result = "^1.0.0"
